@@ -1,5 +1,8 @@
 2009-10-28  Jakub Jelinek  <jakub@redhat.com>
 
+	PR middle-end/41837
+	* gcc.dg/pr41837.c: New test.
+
 	PR debug/41801
 	* g++.dg/ext/sync-3.C: New test.
 
